fix flicker on active

--- a/app/www/react-app/less/app.less
+++ b/app/www/react-app/less/app.less
@@ -236,6 +236,7 @@ body {
 }
 
 .fadeInUp-fadeOutDown-enter.fadeInUp-fadeOutDown-enter-active {
+  opacity: 1;
   animation: fadeInUp .5s;
 }
 
